Bug 30485 - ICE in rs6000_emit_vector_compare when building with -fno-trapping-math
Summary: ICE in rs6000_emit_vector_compare when building with -fno-trapping-math
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.3.0
: P3 normal
Target Milestone: 4.3.0
Assignee: Not yet assigned to anyone
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2007-01-16 19:57 UTC by Joshua Conner
Modified: 2007-01-22 02:07 UTC (History)
3 users (show)

See Also:
Host: powerpc-apple-darwin8
Target: powerpc-apple-darwin8
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joshua Conner 2007-01-16 19:57:11 UTC
The tests pr23816-1.c and vect-111.c (from gcc.dg/vect) generate an ICE when compiled with -fno-trapping-math for rs6000:

$ gcc pr23816-1.c -fno-trapping-math -ftree-vectorize -maltivec -O2
pr23816-1.c: In function 'foo':
pr23816-1.c:9: internal compiler error: in rs6000_emit_vector_compare, at config/rs6000/rs6000.c:11962
Please submit a full bug report,
with preprocessed source if appropriate.
See <URL:http://gcc.gnu.org/bugs.html> for instructions.
$ gcc vect-111.c -fno-trapping-math -ftree-vectorize -maltivec -O2
vect-111.c: In function 'main1':
vect-111.c:19: internal compiler error: in rs6000_emit_vector_compare, at config/rs6000/rs6000.c:11962
Please submit a full bug report,
with preprocessed source if appropriate.
See <URL:http://gcc.gnu.org/bugs.html> for instructions.
$

I have a patch for this that I'll submit...
Comment 1 jconner 2007-01-18 16:44:15 UTC
Subject: Bug 30485

Author: jconner
Date: Thu Jan 18 16:44:03 2007
New Revision: 120902

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=120902
Log:
2007-01-18  Josh Conner  <jconner@apple.com>

	PR target/30485
	* config/rs6000/rs6000.c (rs6000_emit_vector_compare): Add
	support for UNLE, UNLT, UNGE, and UNGT.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/rs6000/rs6000.c

Comment 2 jconner 2007-01-18 16:45:08 UTC
Subject: Bug 30485

Author: jconner
Date: Thu Jan 18 16:44:50 2007
New Revision: 120903

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=120903
Log:
2007-01-18  Josh Conner  <jconner@apple.com>

	PR target/30485
	* gcc.dg/vect/vect.exp: Add support for no-trapping-math tests.
	* gcc.dg/vect/no-trapping-math-1: New.
	* gcc.dg/vect/no-trapping-math-2: New.

Added:
    trunk/gcc/testsuite/gcc.dg/vect/no-trapping-math-1.c
    trunk/gcc/testsuite/gcc.dg/vect/no-trapping-math-2.c
Modified:
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/testsuite/gcc.dg/vect/vect.exp

Comment 3 Andrew Pinski 2007-01-22 02:07:10 UTC
Fixed.