re PR target/30485 (ICE in rs6000_emit_vector_compare when building with -fno-trapping-math)

2007-01-18  Josh Conner  <jconner@apple.com>

	PR target/30485
	* config/rs6000/rs6000.c (rs6000_emit_vector_compare): Add
	support for UNLE, UNLT, UNGE, and UNGT.

From-SVN: r120902